task1/test_results_no_defects/infer_test/memory_allocation_failure/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/memory_allocation_failure.c:250: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 250 by call to `memory_allocation_failure_007_func_001()`, is not freed after the last access at line 250, column 10.
  248.         if(buf[j]!= NULL)
  249.     	{
  250.         	memory_allocation_failure_007_str_gbl = memory_allocation_failure_007_func_001(buf[j]);
                ^
  251.         }
  252.     }

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/memory_allocation_failure.c:277: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 277 by call to `memory_allocation_failure_008_func_001()`, is not freed after the last access at line 277, column 2.
  275. {
  276. 	char *str = "STRINGMEM";
  277. 	memory_allocation_failure_008_func_001(str);
        ^
  278. }
  279. 

#2
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/memory_allocation_failure.c:291: error: Inferbo Alloc Is Big
  Length: 429496728.
  289.     do
  290.     {
  291.     	buf = (char*) malloc(MAX_BUFFER * sizeof(char)); /*Tool should not detect this line as error*/ /*No ERROR:Memory allocation failure */
                          ^
  292.     	i++;
  293.     }while (i<MAX_VAL);

#3
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/memory_allocation_failure.c:291: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 291 by call to `malloc`, is not freed after the last access at line 291, column 6.
  289.     do
  290.     {
  291.     	buf = (char*) malloc(MAX_BUFFER * sizeof(char)); /*Tool should not detect this line as error*/ /*No ERROR:Memory allocation failure */
            ^
  292.     	i++;
  293.     }while (i<MAX_VAL);

#4
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/memory_allocation_failure.c:330: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 330 by call to `malloc`, is not freed after the last access at line 330, column 3.
  328. 	    do
  329. 	    {
  330. 		memory_allocation_failure_010_arr_gbl = (memory_allocation_failure_010_s_001 *) malloc (10*sizeof(memory_allocation_failure_010_s_001));
         ^
  331.             i++;
  332. 	    }while( i<=MAX_VAL);

Found 5 issues
                  Issue Type(ISSUED_TYPE_ID): #
                    Memory Leak(MEMORY_LEAK): 4
  Inferbo Alloc Is Big(INFERBO_ALLOC_IS_BIG): 1
